--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	
+	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Sign Up
+</button>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create Account</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <span aria-hidden="true">&times;</span>
+        </button></div>
+		<div class="modal-body">
+         <form>
+          <div class="form-group">
+            <label for="email" class="col-form-label">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" />
+            <span>Your information is safe with us.</span><br/>
+		  </div>
+          <div class="form-group">
+            <label for="password" class="col-form-label">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" />
+          </div>
+			<div class="form-group">
+            <label for="confirmpassword" class="col-form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password" />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+		
 	</body>
 </html>
